# TestFreeType

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: data88797.json
app/src/main/assets/fonts/: fonts.json
app/src/main/assets/template/: templates.json
app/src/main/assets/template/data88016/: data88016.json  (+4 more)
app/src/main/cpp/: CMakeLists.txt  TextEngine.cpp  TextEngine.h  jni.cpp  text_control.cpp  text_control.h  text_engine.cpp  text_engine.h
app/src/main/cpp/egl/: egl_core.cc  egl_core.h
app/src/main/cpp/font/: distance-field.c  distance-field.h  font-manager.c  font-manager.h  texture-atlas.c  texture-atlas.h  texture-font.c  texture-font.h
app/src/main/cpp/message/: buffer_pool.h  handler.cc  handler.h  message_queue.cc  message_queue.h
app/src/main/cpp/shader/: ColorUtil.cpp  ColorUtil.h  FreeTypeShader.cpp  FreeTypeShader.h  GLVao.cpp  ShaderBase.h  TextShader.cpp  TextShader.h  TextureImageDemo.cpp  TextureImageDemo.h  TinySDF.cpp  TinySDF.h  color_util.cpp  comm_gl.hpp  edtaa3func.h  fbo_util.cpp  fbo_util.h  frame_shader.cpp  frame_shader.h  gl_program.cpp  gl_shader.cpp  gl_vao.cpp  logUtil.h  matrix_shader.cpp  matrix_shader.h  out_shader.cpp  out_shader.h  sdf.h  shader_base.h  shader_manager.cpp  shader_manager.h  text_bean.h  text_shader.cpp  text_shader.h  texture_image_demo.cpp  texture_image_demo.h
app/src/main/cpp/src/gxvalid/: gxvfgen.c
app/src/main/cpp/util/: ImageLoad.cpp  ImageLoad.h  color_util.h  edtaa3func.cpp  fbo_util.cpp  fbo_util.h  java_call_util.cpp  java_call_util.h  sdf.cpp  tiny_sdf.cpp  tiny_sdf.h
app/src/main/res/anim/: fragment_b_hide.xml  fragment_b_show.xml
app/src/main/res/drawable/: overlay_transform_selector.xml  seekbar_bg.xml  shape_seekbar_btn.xml  share_image_selector.xml
app/src/main/res/layout/: activity_main.xml  activity_test_font_texture.xml  activity_test_texture.xml  activity_text_edit.xml  activity_text_shader.xml  dialog_text.xml  fragment_template.xml  item_text_font.xml  item_tmp.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+51 files in other folders)
